--- a/style.css
+++ b/style.css
@@ -35,4 +35,13 @@ color: #493831;
 padding-bottom: 10px;
 margin: 0;
 }
+footer {
+clear:both !important;
+width:940px;
+height: 100px;
+padding: 10px;
+color:#200f08 ;
+border-top: 1px dotted #000;
+background:#fff;
+}
 
